force-app/main/default/objects/custom_create372__c/custom_create372__c.object-meta.xml
<CustomObject>
    <label>Custom created object372</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects372</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>