force-app/main/default/objects/custom_create372__c/fields/custom_create_372field553__c.field-meta.xml
<CustomField>
    <fullName>custom_create_372field553__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 372field553</label>
    <type>Checkbox</type>
</CustomField>